[build-system]
build-backend = "setuptools.build_meta"
requires = ["setuptools>=61.0"]
[project]
name = "repo-test-sdk"
description = "this porfile is made to test New repositories "
version = "1.1.9"
readme = "README.md"
requires-python = ">=3.7"
keywords = ["git", "repo"]
authors = [{name = "SUbtain", email = "Subtain@gmail.com"}]
urls = {Documentation = "https://tester.com"}
dependencies = ["apimatic-core~=0.2.0", "apimatic-core-interfaces~=0.1.0", "apimatic-requests-client-adapter~=0.1.0", "python-dateutil~=2.8.1", "enum34~=1.1, >=1.1.10", "deprecation~=2.1"]
classifiers = []
[project.optional-dependencies]
testutils = ["pytest>=7.2.2"]
